--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Federico Spini <federico.spini@gmail.com>",
-  "name": "connect-slidify",
-  "description": "Connect middleware - Markdown slides render engine",
+  "name": "slidify",
+  "description": "Markdown slides render engine",
   "version": "0.0.1",
   "homepage": "https://github.com/spini/slidify",
   "repository": {
